<resources>
    <string name="app_name">Primer tp login</string>
    <string name="edit_text_hint_user">Ingrese su nombre</string>
    <string name="edit_text_hint_password">Ingrese password</string>
    <string name="edit_text_hint_title">Log in</string>
    <string name="edit_text_hint_register">Registrarse</string>
    <string name="edit_text_hint_sign_in">Iniciar</string>
    <string name="edit_text_hint_register_title">Registro</string>
    <string name="edit_text_hint_Log_Out">Cerrar sesión</string>
    <string name="edit_text_hint_autoLogin">Mantener sesión iniciada</string>
    <string name="select_genre">Selecciona tu género favorito de películas</string>
    <string name="nav_drawer_home_open">Open</string>
    <string name="nav_drawer_home_close">Close</string>
    <string name="Cerrar">Cerrar</string>
</resources>
